{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 71,
  "lineage": "97721ab3-f6a4-eae5-f5ed-7ddf3d97f8eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0860c9429baba6ad2",
            "arn": "arn:aws:ec2:ap-south-1:433581887735:instance/i-0038402e780e59f58",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0038402e780e59f58",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "dev-terraform-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d5df03b7a6cf8259",
            "private_dns": "ip-10-0-5-39.ap-south-1.compute.internal",
            "private_ip": "10.0.5.39",
            "public_dns": "ec2-13-232-209-78.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.209.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0afea5b44a02f598a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c5db220cb6b396f",
            "tags": {
              "Managed By": "Terraform",
              "environment": "dev",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "environment": "dev",
              "project": "terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0135304c9684710fd"
            ]
          },
          "dependencies": [
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.data.aws_ami.eks_worker",
            "module.eks.module.fargate.data.aws_iam_role.custom_fargate_iam_role",
            "module.eks.aws_autoscaling_group.workers_launch_template",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_iam_role_policy_attachment.workers_AmazonEKSWorkerNodePolicy",
            "module.eks.module.node_groups.data.cloudinit_config.workers_userdata",
            "module.eks.null_resource.wait_for_cluster",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_security_group_rule.workers_ingress_cluster_primary",
            "module.eks.module.fargate.data.aws_iam_policy_document.eks_fargate_pod_assume_role",
            "module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.aws_security_group_rule.cluster_private_access",
            "module.vpc.aws_vpc.this",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.workers_ingress_cluster_kubelet",
            "module.eks.random_pet.workers",
            "module.eks.module.fargate.aws_iam_role.eks_fargate_pod",
            "module.eks.module.fargate.aws_iam_role_policy_attachment.eks_fargate_pod",
            "module.eks.module.node_groups.random_pet.node_groups",
            "module.eks.aws_autoscaling_group.workers",
            "module.eks.data.aws_partition.current",
            "module.eks.data.template_file.launch_template_userdata",
            "module.eks.aws_launch_configuration.workers",
            "module.vpc.aws_subnet.private",
            "module.eks.data.aws_iam_policy_document.cluster_elb_sl_role_creation",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.random_pet.workers_launch_template",
            "module.eks.aws_iam_role_policy_attachment.workers_additional_policies",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_security_group_rule.workers_ingress_cluster",
            "module.eks.aws_eks_cluster.this",
            "module.eks.data.aws_iam_instance_profile.custom_worker_group_iam_instance_profile",
            "module.eks.aws_security_group_rule.workers_ingress_self",
            "module.eks.data.aws_iam_instance_profile.custom_worker_group_launch_template_iam_instance_profile",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.kubernetes_config_map.aws_auth",
            "module.eks.module.fargate.aws_eks_fargate_profile.this",
            "data.aws_ami.ubuntu",
            "data.aws_subnet_ids.public",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.workers",
            "module.eks.aws_iam_role_policy_attachment.workers_AmazonEC2ContainerRegistryReadOnly",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.aws_launch_template.workers_launch_template",
            "module.eks.aws_security_group_rule.cluster_primary_ingress_workers",
            "module.eks.data.aws_ami.eks_worker_windows",
            "module.eks.data.aws_iam_policy_document.workers_assume_role_policy",
            "module.eks.data.template_file.userdata",
            "module.eks.aws_iam_instance_profile.workers_launch_template",
            "module.eks.aws_iam_policy.cluster_elb_sl_role_creation",
            "module.eks.aws_iam_role_policy_attachment.cluster_elb_sl_role_creation",
            "module.eks.local_file.kubeconfig",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group_rule.workers_egress_internet",
            "module.eks.aws_security_group_rule.workers_ingress_cluster_https",
            "aws_security_group.worker_group_mgmt_one",
            "data.aws_availability_zones.available",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.module.node_groups.aws_launch_template.workers",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_key_pair.key-pair",
            "aws_security_group.ssh-allowed",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.module.node_groups.aws_eks_node_group.workers",
            "module.eks.aws_iam_role_policy_attachment.workers_AmazonEKS_CNI_Policy",
            "module.eks.aws_security_group.workers",
            "aws_security_group.worker_group_mgmt_two",
            "data.aws_eks_cluster.cluster",
            "module.eks.aws_iam_instance_profile.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:security-group/sg-0c7a6e7b07484f51e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c7a6e7b07484f51e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20210516090347245600000009",
            "name_prefix": "all_worker_management",
            "owner_id": "433581887735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed By": "Terraform",
              "environment": "dev",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "environment": "dev",
              "project": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0359617ca21416380"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:security-group/sg-0135304c9684710fd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0135304c9684710fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.70.197.152/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "103.70.197.152/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210516124413950700000001",
            "name_prefix": "terraform-",
            "owner_id": "433581887735",
            "revoke_rules_on_delete": false,
            "tags": {
              "For": "bastion",
              "Managed By": "Terraform",
              "Name": "ssh-allowed",
              "environment": "dev",
              "project": "terraform"
            },
            "tags_all": {
              "For": "bastion",
              "Managed By": "Terraform",
              "Name": "ssh-allowed",
              "environment": "dev",
              "project": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0359617ca21416380"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:security-group/sg-0a652431b8f88214a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a652431b8f88214a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20210516090347244800000008",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "433581887735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed By": "Terraform",
              "environment": "dev",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "environment": "dev",
              "project": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0359617ca21416380"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:security-group/sg-0a122431ee6fbeeb1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a122431ee6fbeeb1",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20210516090347243000000007",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "433581887735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed By": "Terraform",
              "environment": "dev",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "environment": "dev",
              "project": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0359617ca21416380"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:security-group/sg-0c7fc29b70b669dd7",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7fc29b70b669dd7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09330e300fdb81472"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tfone2021051609034851600000000a",
            "name_prefix": "tfone",
            "owner_id": "433581887735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed By": "Terraform",
              "Name": "tfone-eks_cluster_sg",
              "environment": "dev",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "Name": "tfone-eks_cluster_sg",
              "environment": "dev",
              "project": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0359617ca21416380"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:security-group/sg-09330e300fdb81472",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09330e300fdb81472",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7fc29b70b669dd7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7fc29b70b669dd7"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "tfone2021051609034851880000000b",
            "name_prefix": "tfone",
            "owner_id": "433581887735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed By": "Terraform",
              "Name": "tfone-eks_worker_sg",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "owned",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "Name": "tfone-eks_worker_sg",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "owned",
              "project": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0359617ca21416380"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-4209454186",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c7fc29b70b669dd7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2863731409",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c7fc29b70b669dd7",
            "self": false,
            "source_security_group_id": "sg-09330e300fdb81472",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-43906134",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09330e300fdb81472",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2075708889",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09330e300fdb81472",
            "self": false,
            "source_security_group_id": "sg-0c7fc29b70b669dd7",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2701364977",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09330e300fdb81472",
            "self": false,
            "source_security_group_id": "sg-0c7fc29b70b669dd7",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-4141106019",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09330e300fdb81472",
            "self": false,
            "source_security_group_id": "sg-09330e300fdb81472",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f070a8ab67ed8201",
            "domain": "vpc",
            "id": "eipalloc-0cd2774eb53d8935b",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-063d8dee42cdbd69a",
            "private_dns": "ip-10-0-4-121.ap-south-1.compute.internal",
            "private_ip": "10.0.4.121",
            "public_dns": "ec2-13-127-151-179.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.151.179",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Managed By": "Terraform",
              "Name": "education-vpc-ap-south-1a",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "Name": "education-vpc-ap-south-1a",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "project": "terraform"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:internet-gateway/igw-07c9aa6ab51fb13a1",
            "id": "igw-07c9aa6ab51fb13a1",
            "owner_id": "433581887735",
            "tags": {
              "Managed By": "Terraform",
              "Name": "education-vpc",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "Name": "education-vpc",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "project": "terraform"
            },
            "vpc_id": "vpc-0359617ca21416380"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd2774eb53d8935b",
            "id": "nat-057a4e07cf652decb",
            "network_interface_id": "eni-063d8dee42cdbd69a",
            "private_ip": "10.0.4.121",
            "public_ip": "13.127.151.179",
            "subnet_id": "subnet-06ed8ede551cb13b5",
            "tags": {
              "Managed By": "Terraform",
              "Name": "education-vpc-ap-south-1a",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "Name": "education-vpc-ap-south-1a",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "project": "terraform"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-046c4a828d9dfcf0a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-057a4e07cf652decb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-046c4a828d9dfcf0a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07c9aa6ab51fb13a1",
            "id": "r-rtb-0bc4627c80c1c7e9f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bc4627c80c1c7e9f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:route-table/rtb-046c4a828d9dfcf0a",
            "id": "rtb-046c4a828d9dfcf0a",
            "owner_id": "433581887735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057a4e07cf652decb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Managed By": "Terraform",
              "Name": "education-vpc-private",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "Name": "education-vpc-private",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "project": "terraform"
            },
            "vpc_id": "vpc-0359617ca21416380"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:route-table/rtb-0bc4627c80c1c7e9f",
            "id": "rtb-0bc4627c80c1c7e9f",
            "owner_id": "433581887735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c9aa6ab51fb13a1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Managed By": "Terraform",
              "Name": "education-vpc-public",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "Name": "education-vpc-public",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "project": "terraform"
            },
            "vpc_id": "vpc-0359617ca21416380"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042180370c9d5b8ef",
            "route_table_id": "rtb-046c4a828d9dfcf0a",
            "subnet_id": "subnet-03b54de23e16a0495"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f8044d83b772ca4",
            "route_table_id": "rtb-046c4a828d9dfcf0a",
            "subnet_id": "subnet-0090b6f567f7cf6cf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a042120a4b8cf534",
            "route_table_id": "rtb-046c4a828d9dfcf0a",
            "subnet_id": "subnet-0efa1a8862fa1fd4f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0235da1f9625fdda6",
            "route_table_id": "rtb-0bc4627c80c1c7e9f",
            "subnet_id": "subnet-06ed8ede551cb13b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095d750c4f51a6a20",
            "route_table_id": "rtb-0bc4627c80c1c7e9f",
            "subnet_id": "subnet-03c5db220cb6b396f"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dda6669d986a2c68",
            "route_table_id": "rtb-0bc4627c80c1c7e9f",
            "subnet_id": "subnet-01a89886e34e837a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:subnet/subnet-03b54de23e16a0495",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03b54de23e16a0495",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433581887735",
            "tags": {
              "Managed By": "Terraform",
              "Name": "education-vpc-private-ap-south-1a",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "Name": "education-vpc-private-ap-south-1a",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "terraform"
            },
            "vpc_id": "vpc-0359617ca21416380"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:subnet/subnet-0090b6f567f7cf6cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0090b6f567f7cf6cf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433581887735",
            "tags": {
              "Managed By": "Terraform",
              "Name": "education-vpc-private-ap-south-1b",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "Name": "education-vpc-private-ap-south-1b",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "terraform"
            },
            "vpc_id": "vpc-0359617ca21416380"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:subnet/subnet-0efa1a8862fa1fd4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0efa1a8862fa1fd4f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433581887735",
            "tags": {
              "Managed By": "Terraform",
              "Name": "education-vpc-private-ap-south-1c",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "Name": "education-vpc-private-ap-south-1c",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "terraform"
            },
            "vpc_id": "vpc-0359617ca21416380"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:subnet/subnet-06ed8ede551cb13b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-06ed8ede551cb13b5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "433581887735",
            "tags": {
              "Managed By": "Terraform",
              "Name": "education-vpc-public-ap-south-1a",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "Name": "education-vpc-public-ap-south-1a",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "terraform"
            },
            "vpc_id": "vpc-0359617ca21416380"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:subnet/subnet-03c5db220cb6b396f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-03c5db220cb6b396f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "433581887735",
            "tags": {
              "Managed By": "Terraform",
              "Name": "education-vpc-public-ap-south-1b",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "Name": "education-vpc-public-ap-south-1b",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "terraform"
            },
            "vpc_id": "vpc-0359617ca21416380"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:subnet/subnet-01a89886e34e837a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-01a89886e34e837a7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "433581887735",
            "tags": {
              "Managed By": "Terraform",
              "Name": "education-vpc-public-ap-south-1c",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "Name": "education-vpc-public-ap-south-1c",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "terraform"
            },
            "vpc_id": "vpc-0359617ca21416380"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:433581887735:vpc/vpc-0359617ca21416380",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00ccdcf34c611321e",
            "default_route_table_id": "rtb-062a44f200a85d259",
            "default_security_group_id": "sg-07ee40afbf688d547",
            "dhcp_options_id": "dopt-836199e8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0359617ca21416380",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-062a44f200a85d259",
            "owner_id": "433581887735",
            "tags": {
              "Managed By": "Terraform",
              "Name": "education-vpc",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "project": "terraform"
            },
            "tags_all": {
              "Managed By": "Terraform",
              "Name": "education-vpc",
              "environment": "dev",
              "kubernetes.io/cluster/tfone": "shared",
              "project": "terraform"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}